# midl-website-2024

./: .gitmodules  LICENSE.md  Makefile  README.md  netlify.toml  pyproject.toml  requirements.txt  website.yaml
pages/: 404.md  aims-and-scope.md  author-instructions.md  awards.md  call-for-papers.md  camera-ready.md  dates.md  doctoral.md  index.md  keynote.md  organization.md  program-glance.md  registration.md  review-guidelines.md  scientific-program.md  sponsors.md  sponsorship-packages.md  venue.md  visa.md
static/data/: papers.json
